--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "passport": "^0.6.0",
     "passport-discord": "^0.1.4",
     "prisma": "^5.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.6.2"
   }
 }
